@@ -8,4 +8,9 @@ echo "--- LAUNCH ---"
 echo " > run monitor"
 echo ""
 
-$JAVA --module-path libs:mods --module monitor
+$JAVA --module-path libs:mods \
+	--add-modules monitor.rest \
+	--add-reads monitor=monitor.rest \
+	--add-exports monitor.rest/monitor.rest=monitor \
+	--add-opens monitor.persistence/monitor.persistence.dtos=hibernate \
+	--module monitor
